# sparse

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/ghc/: chat-20260121.md  project-progress-verification.md  project-vision-overview.md
docs/spec/: Add-Nltk.md  Engine-Implementation-Roadmap.md  Hugging-Face-Implementation.md  Parsing-Libraries.md
sparse/: __init__.py  utils.py
sparse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sparse/engines/: __init__.py  flair_engine.py  gensim_engine.py  hf_tokenizers_engine.py  nltk_engine.py  sentencepiece_engine.py  sklearn_engine.py  spacy_engine.py  stanza_engine.py  textacy_engine.py  textblob_engine.py  transformers_engine.py
sparse/utils/: __init__.py  html_cleaning.py  language_detection.py  normalization.py
tests/: __init__.py  test_engines_flair.py  test_engines_gensim.py  test_engines_hf_tokenizers.py  test_engines_sentencepiece.py  test_engines_sklearn.py  test_engines_spacy.py  test_engines_stanza.py  test_engines_textacy.py  test_engines_textblob.py  test_engines_transformers.py  test_sparse.py  test_utils.py
