[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse"
version = "0.1.0"
description = "The 'Smart' Parse Function for Python. Unified interface for text preprocessing across multiple NLP libraries."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "sparse contributors", email = ""}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# Core engines (recommended starting set)
core = [
    "nltk>=3.8",
    "spacy>=3.0",
    "textblob>=0.17",
]

# Advanced engines (powerful, heavy)
advanced = [
    "transformers>=4.30",
    "torch>=2.0",
    "gensim>=4.0",
    "stanza>=1.5",
]

# Specialized engines (niche use cases)
specialized = [
    "tokenizers>=0.13",
    "sentencepiece>=0.1.99",
    "flair>=0.11",
]

# Text utilities and helpers
utils = [
    "ftfy>=6.0",
    "Unidecode>=1.3",
    "regex>=2022.0",
    "emoji>=2.0",
    "langdetect>=1.0",
    "beautifulsoup4>=4.9",
    "lxml>=4.6",
    "bleach>=5.0",
    "scikit-learn>=1.0",
    "textacy>=0.11",
]

# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

# Everything
all = [
    "sparse[core,advanced,specialized,utils,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/sparse"
Documentation = "https://github.com/yourusername/sparse#readme"
Repository = "https://github.com/yourusername/sparse.git"
Issues = "https://github.com/yourusername/sparse/issues"

[tool.setuptools]
packages = ["sparse", "sparse.engines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
